--- a/package.json
+++ b/package.json
@@ -1,24 +1,3 @@
-{
-  "name": " ",
-  "version": "0.0.1",
-  "description": "",
-  "keywords": "",
-  "license": "",
-  "author": "",
-  "scripts": {
-    "build": "parcel build src/index.html",
-    "dev": "parcel src/index.html --open",
-    "start": "npm run build && npm run dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "parcel-bundler": "^1.12.4"
-  },
-  "dependencies": {
-    "datatables.net": "^1.13.1",
-    "datatables.net-dt": "^1.13.1",
-    "evo-calendar": "^1.1.3",
-    "fullcalendar": "^6.0.2",
-    "sweetalert2": "^11.6.16"
-  }
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:f678ccc9d53c7d577bd795c7b1f561ed431e79af58c7fecadae0d221b3f51a20
+size 612
